--- a/src/components/en/About.astro
+++ b/src/components/en/About.astro
@@ -17,7 +17,7 @@
     <div
       class="opacity-0 border-r-[3px] my-8 border-gold flex flex-col gap-6 pt-8"
     >
-      <h2 class="opacity-0 text-3xl font-bold">Tecnologias:</h2>
+      <h2 class="opacity-0 text-3xl font-bold">Technologies:</h2>
       <ul class="opacity-0 grid grid-cols-2 text-lg gap-y-5 xl:pl-14">
         <li>
           <div class="flex justify-center items-center max-w-fit">
@@ -148,30 +148,29 @@
 
     <div class="my-14 flex flex-col gap-6 px-4 pt-12">
       <p class="opacity-0 text-xl">
-        Amante da tecnologia e fascinado com a programação de aplicações, sou um
-        desenvolvedor Full-Stack focado principalmente no ecossistema da área de
-        desenvolvimento web, mas também com habilidades em desenvolvimento
-        mobile. Mais familiarizado com React, Vue e Express, estou sempre em
-        busca de aprender novas tecnologias e assim ter as habilidades
-        necessárias para resolver cada problema e realizar cada projeto da
-        maneira mais eficiente possível.
+        A technology lover and fascinated with app development, I’m a Full-Stack
+        developer focused mainly on the ecosystem of web development, but also
+        with mobile development skills. Mostly used to work with React, Vue and
+        Express.js, I’m always looking for new technologies to learn and expand
+        my skills as a developer so I can have the knowledge to solver any
+        problem and build every project in the most efficient way.
       </p>
     </div>
     <div
       class="opacity-0 border-l-[3px] my-8 border-gold flex flex-col gap-6 pt-8"
     >
-      <h2 class="opacity-0 text-3xl font-bold">Sobre / Contato:</h2>
+      <h2 class="opacity-0 text-3xl font-bold">About / Contact:</h2>
       <ul
         class="flex flex-col items-start lg:text-md xl:text-lg gap-y-3 xl:px-5"
       >
         <li>
-          <strong class="text-xl">Nome:</strong> Carlos Eduardo Viana
+          <strong class="text-xl">Name:</strong> Carlos Eduardo Viana
         </li>
         <li>
-          <strong class="text-xl">Idade:</strong> 27
+          <strong class="text-xl">Age:</strong> 27
         </li>
         <li>
-          <p><strong class="text-xl">De:</strong> Pernambuco, Brasil</p>
+          <p><strong class="text-xl">From:</strong> Pernambuco, Brasil</p>
         </li>
         <li>
           <p>
@@ -179,7 +178,7 @@
           </p>
         </li>
         <li>
-          <strong class="text-xl">Certificado:</strong>
+          <strong class="text-xl">Certificate:</strong>
           <a
             class="underline underline-offset-2 ml-2"
             href="https://e-certificado.com/login/visualizar?c=1843282A5FD56C1F12188270"
@@ -248,20 +247,20 @@
     >
       <div class="my-14 flex flex-col gap-6 px-4 pt-8">
         <p class="text-xl">
-          Amante da tecnologia e fascinado com a programação de aplicações, sou
-          um desenvolvedor Full-Stack focado principalmente no ecossistema da
-          área de desenvolvimento web, mas também com habilidades em
-          desenvolvimento mobile. Mais familiarizado com React, Vue e Express,
-          estou sempre em busca de aprender novas tecnologias e assim ter as
-          habilidades necessárias para resolver cada problema e realizar cada
-          projeto da maneira mais eficiente possível.
+          A technology lover and fascinated with app development, I’m a
+          Full-Stack developer focused mainly on the ecosystem of web
+          development, but also with mobile development skills. Mostly used to
+          work with React, Vue and Express.js, I’m always looking for new
+          technologies to learn and expand my skills as a developer so I can
+          have the knowledge to solver any problem and build every project in
+          the most efficient way.
         </p>
       </div>
 
       <div class="bg-gold w-11/12 h-1 mx-auto"></div>
 
       <div class="my-8 flex flex-col gap-6">
-        <h2 class="text-3xl font-bold">Tecnologias:</h2>
+        <h2 class="text-3xl font-bold">Technologies:</h2>
         <ul
           class="grid grid-cols-2 text-lg gap-y-5 pl-[10%] sm:pl-[15%] md:pl-[20%]"
         >
@@ -415,16 +414,16 @@
       <div class="bg-gold w-11/12 h-1 mx-auto"></div>
 
       <div class="my-8 flex flex-col gap-6 px-2">
-        <h2 class="text-3xl font-bold">Sobre / Contato:</h2>
+        <h2 class="text-3xl font-bold">About / Contact:</h2>
         <ul class="flex flex-col items-center lg:text-md xl:text-lg gap-y-3">
           <li>
-            <strong class="text-xl">Nome:</strong> Carlos Eduardo Viana
+            <strong class="text-xl">Name:</strong> Carlos Eduardo Viana
           </li>
           <li>
-            <strong class="text-xl">Idade:</strong> 27
+            <strong class="text-xl">Age:</strong> 27
           </li>
           <li>
-            <p><strong class="text-xl">De:</strong> Pernambuco, Brasil</p>
+            <p><strong class="text-xl">From:</strong> Pernambuco, Brasil</p>
           </li>
           <li>
             <p>
@@ -432,7 +431,7 @@
             </p>
           </li>
           <li>
-            <strong class="text-xl">Certificado:</strong>
+            <strong class="text-xl">Certificate:</strong>
             <a
               class="underline underline-offset-2 ml-2"
               href="https://e-certificado.com/login/visualizar?c=1843282A5FD56C1F12188270"
