--- a/src/components/en/Header.astro
+++ b/src/components/en/Header.astro
@@ -49,7 +49,7 @@
           <a
             class="hover:text-gold focus:text-gold duration-200 outline-none header-item"
             href="#about"
-            >Sobre Mim
+            >About me
             <div class="duration-200"></div>
           </a>
         </li>
@@ -57,15 +57,15 @@
           <a
             class="hover:text-gold focus:text-gold duration-200 outline-none header-item"
             href="#projects"
-            >Projetos
+            >Projects
             <div class="duration-200"></div>
           </a>
         </li>
         <li>
           <a
             class="hover:text-gold focus:text-gold duration-200 outline-none header-item"
-            href="/en"
-            >EN-US
+            href="/"
+            >PT-BR
             <div class="duration-200"></div>
           </a>
         </li>
@@ -73,7 +73,7 @@
           <button
             class="hover:text-gold focus:text-gold duration-200 cursor-pointer outline-none header-item"
           >
-            Idioma
+            Language
             <div class="duration-200"></div>
           </button>
         </li> -->
