--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -1,9 +1,9 @@
 ---
-import About from "../components/About.astro";
-import Hero from "../components/Hero.astro";
+import About from "../components/en/About.astro";
+import Hero from "../components/en/Hero.astro";
 import IconsBackground from "../components/IconsBackground.astro";
-import Projetos from "../components/Projetos.astro";
-import Layout from "../layouts/Layout.astro";
+import Projetos from "../components/en/Projetos.astro";
+import Layout from "../layouts/LayoutEN.astro";
 ---
 
 <Layout title="Kadu Portfolio">
