--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,7 +11,7 @@
   >
     <img
       class="absolute opacity-0 rounded-full w-24 h-24 border-[3px] border-gold -top-12 left-[50%] translate-x-[-50%] z-20"
-      src="./profile.jpg"
+      src="/profile.webp"
       alt="eu"
     />
     <div
@@ -239,7 +239,7 @@
   <div class="relative mt-24 mx-auto min-w-[6rem] lg:hidden">
     <img
       class="absolute rounded-full w-24 h-24 border-[3px] border-gold -top-12 left-[50%] translate-x-[-50%]"
-      src="./profile.jpg"
+      src="/profile.webp"
       alt="eu"
     />
     <div
