--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -146,15 +146,20 @@
       </ul>
     </div>
 
-    <div class="my-14 flex flex-col gap-6 px-4 pt-12">
-      <p class="opacity-0 text-xl">
-        Amante da tecnologia e fascinado com a programação de aplicações, sou um
-        desenvolvedor Full-Stack focado principalmente no ecossistema da área de
-        desenvolvimento web, mas também com habilidades em desenvolvimento
-        mobile. Mais familiarizado com React, Vue e Express, estou sempre em
-        busca de aprender novas tecnologias e assim ter as habilidades
-        necessárias para resolver cada problema e realizar cada projeto da
-        maneira mais eficiente possível.
+    <div class="my-14 flex flex-col gap-6 px-4 pt-2">
+      <p class="opacity-0 text-lg">
+        Sou um desenvolvedor Full-Stack com foco principal na área de
+        desenvolvimento Web, mas também com habilidades em desenvolvimento
+        mobile. Sou mais familiarizado com Javascript, Typesctipt, React, React
+        Native, Next.js, Vue, Nuxt, Node e Express. Atualmente trabalho
+        prestando serviços em plataformas para freelancers, realizando desde
+        integrações de APIs, correções de bugs e desenvolvimento de novas
+        funcionalidades a projetos já existentes, até o desenvolvimento de
+        aplicações por completo. Sou fascinado por tecnologia e por programação,
+        por isso estou sempre em busca de aprender novas tecnologias, linguagens
+        e frameworks para assim melhorar minhas habilidades para conseguir
+        escolher a melhor opção para cada caso e realizar cada projeto de
+        maneira mais eficiente.
       </p>
     </div>
     <div
@@ -246,15 +251,20 @@
       id="about-animation-mobile"
       class="bg-black/[0.5] border-gold border-[3px] rounded-lg grid-cols-1 grid sm:max-w-[80%]"
     >
-      <div class="my-14 flex flex-col gap-6 px-4 pt-8">
-        <p class="text-xl">
-          Amante da tecnologia e fascinado com a programação de aplicações, sou
-          um desenvolvedor Full-Stack focado principalmente no ecossistema da
-          área de desenvolvimento web, mas também com habilidades em
-          desenvolvimento mobile. Mais familiarizado com React, Vue e Express,
-          estou sempre em busca de aprender novas tecnologias e assim ter as
-          habilidades necessárias para resolver cada problema e realizar cada
-          projeto da maneira mais eficiente possível.
+      <div class="my-14 flex flex-col gap-6 px-4 pt-4">
+        <p class="text-lg">
+          Sou um desenvolvedor Full-Stack com foco principal na área de
+          desenvolvimento Web, mas também com habilidades em desenvolvimento
+          mobile. Sou mais familiarizado com Javascript, Typesctipt, React,
+          React Native, Next.js, Vue, Nuxt, Node e Express. Atualmente trabalho
+          prestando serviços em plataformas para freelancers, realizando desde
+          integrações de APIs, correções de bugs e desenvolvimento de novas
+          funcionalidades a projetos já existentes, até o desenvolvimento de
+          aplicações por completo. Sou fascinado por tecnologia e por
+          programação, por isso estou sempre em busca de aprender novas
+          tecnologias, linguagens e frameworks para assim melhorar minhas
+          habilidades para conseguir escolher a melhor opção para cada caso e
+          realizar cada projeto de maneira mais eficiente.
         </p>
       </div>
 
