--- a/src/components/en/About.astro
+++ b/src/components/en/About.astro
@@ -146,14 +146,19 @@
       </ul>
     </div>
 
-    <div class="my-14 flex flex-col gap-6 px-4 pt-12">
-      <p class="opacity-0 text-xl">
-        A technology lover and fascinated with app development, I’m a Full-Stack
-        developer focused mainly on the ecosystem of web development, but also
-        with mobile development skills. Mostly used to work with React, Vue and
-        Express.js, I’m always looking for new technologies to learn and expand
-        my skills as a developer so I can have the knowledge to solver any
-        problem and build every project in the most efficient way.
+    <div class="my-14 flex flex-col gap-6 px-4 pt-4">
+      <p class="opacity-0 text-lg">
+        I’m a full Stack developer with main focus on the area of web
+        development, bult also with skill in mobile development. I’m more used
+        to work with JavaScript, Typescript, React, React Native, Next.js, Vue,
+        Nuxt.js, Node and Express. At the moment I’m working as a developer in
+        platforms for freelancers, from making API integrations, fixing bugs,
+        developing new functionalities to clients existing projects to building
+        complete projects from scratch. Fascinated with technology and with
+        programming, I’m always in search to learn new technologies, frameworks
+        and languages, so I can improve my skills and have the ability to choose
+        the best option to solve each problem and build each project in the most
+        efficient way.
       </p>
     </div>
     <div
@@ -245,15 +250,19 @@
       id="about-animation-mobile"
       class="bg-black/[0.5] border-gold border-[3px] rounded-lg grid-cols-1 grid sm:max-w-[80%]"
     >
-      <div class="my-14 flex flex-col gap-6 px-4 pt-8">
-        <p class="text-xl">
-          A technology lover and fascinated with app development, I’m a
-          Full-Stack developer focused mainly on the ecosystem of web
-          development, but also with mobile development skills. Mostly used to
-          work with React, Vue and Express.js, I’m always looking for new
-          technologies to learn and expand my skills as a developer so I can
-          have the knowledge to solver any problem and build every project in
-          the most efficient way.
+      <div class="my-14 flex flex-col gap-6 px-4 pt-4">
+        <p class="text-lg">
+          I’m a full Stack developer with main focus on the area of web
+          development, bult also with skill in mobile development. I’m more used
+          to work with JavaScript, Typescript, React, React Native, Next.js,
+          Vue, Nuxt.js, Node and Express. At the moment I’m working as a
+          developer in platforms for freelancers, from making API integrations,
+          fixing bugs, developing new functionalities to clients existing
+          projects to building complete projects from scratch. Fascinated with
+          technology and with programming, I’m always in search to learn new
+          technologies, frameworks and languages, so I can improve my skills and
+          have the ability to choose the best option to solve each problem and
+          build each project in the most efficient way.
         </p>
       </div>
 
