--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -146,8 +146,8 @@
       </ul>
     </div>
 
-    <div class="my-14 flex flex-col gap-6 px-4 pt-2">
-      <p class="opacity-0 text-lg">
+    <div class="my-14 flex flex-col gap-6 px-4 pt-4">
+      <p class="opacity-0 text-[17.5px]">
         Sou um desenvolvedor Full-Stack com foco principal na área de
         desenvolvimento Web, mas também com habilidades em desenvolvimento
         mobile. Sou mais familiarizado com Javascript, Typesctipt, React, React
