--- a/src/components/IconsBackground.astro
+++ b/src/components/IconsBackground.astro
@@ -5,180 +5,225 @@
 <div class="background">
   <div class="back-shapes text-center overflow-hidden px-4 md:px-0">
     <span
+      aria-hidden="true"
       class="icon js"
       style="top:69.59856996935649%;left:13.020833333333334%;animation-delay:-0.9s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon astro"
       style="top:58.59856996935649%;left:5.020833333333334%;animation-delay:-3.9s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon vue"
       style="top:31.46067415730337%;left:33.59375%;animation-delay:-4.8s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon ts"
       style="top:76.50663942798774%;left:38.020833333333336%;animation-delay:-4s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon react"
       style="top:21.450459652706844%;left:14.0625%;animation-delay:-2.8s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon docker"
       style="top:58.12053115423902%;left:56.770833333333336%;animation-delay:-2.15s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon css"
       style="top:8.682328907048008%;left:75.70833333333333%;animation-delay:-1.9s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon next"
       style="top:31.3585291113381%;left:58.541666666666664%;animation-delay:-0.65s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon ts"
       style="top:69.96935648621042%;left:81.45833333333333%;animation-delay:-0.4s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon css"
       style="top:49.96935648621042%;left:91.45833333333333%;animation-delay:-0.4s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon js"
       style="top:15.117466802860061%;left:32.34375%;animation-delay:-4.1s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon node"
       style="top:13.074565883554648%;left:45.989583333333336%;animation-delay:-3.65s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon html"
       style="top:55.87334014300306%;left:27.135416666666668%;animation-delay:-2.25s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon nuxt"
       style="top:49.54034729315628%;left:53.75%;animation-delay:-2s;"></span>
     <span
+      aria-hidden="true"
       class="icon mongo"
       style="top:34.62717058222676%;left:49.635416666666664%;animation-delay:-1.55s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon docker"
       style="top:33.19713993871297%;left:86.14583333333333%;animation-delay:-0.95s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon css"
       style="top:24.19203268641471%;left:25.208333333333332%;animation-delay:-4.45s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon mongo"
       style="top:39.7344228804903%;left:10.833333333333334%;animation-delay:-3.35s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon git"
       style="top:75.83452502553627%;left:24.427083333333332%;animation-delay:-2.3s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon sql"
       style="top:2.860061287027579%;left:50.864583333333336%;animation-delay:-1.75s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon nuxt"
       style="top:71.3993871297242%;left:68.45833333333333%;animation-delay:-1.25s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon docker"
       style="top:68.3993871297242%;left:57.45833333333333%;animation-delay:-0.25s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon redux"
       style="top:31.256384065372828%;left:76.92708333333333%;animation-delay:-0.65s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon react"
       style="top:46.47599591419816%;left:38.90625%;animation-delay:-0.35s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon git"
       style="top:3.4729315628192032%;left:19.635416666666668%;animation-delay:-4.3s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon sass"
       style="top:3.575076608784474%;left:6.25%;animation-delay:-4.05s;"></span>
     <span
+      aria-hidden="true"
       class="icon vue"
       style="top:10.575076608784474%;left:10.25%;animation-delay:-4.05s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon tailwind"
       style="top:77.3237997957099%;left:4.583333333333333%;animation-delay:-3.75s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon express"
       style="top:36.3237997957099%;left:6.583333333333333%;animation-delay:-3.75s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon sql"
       style="top:0.9193054136874361%;left:71.14583333333333%;animation-delay:-3.3s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon js"
       style="top:0.7193054136874361%;left:31.14583333333333%;animation-delay:-2.3s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon node"
       style="top:23.6976506639428%;left:63.28125%;animation-delay:-2.1s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon next"
       style="top:92.30745658835546%;left:45.15625%;animation-delay:-1.75s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon sql"
       style="top:82.30745658835546%;left:65.15625%;animation-delay:-1.25s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon tailwind"
       style="top:92.30745658835546%;left:25.15625%;animation-delay:-0.75s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon astro"
       style="top:87.30745658835546%;left:95.15625%;animation-delay:-1.05s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon express"
       style="top:87.30745658835546%;left:3.15625%;animation-delay:-1.25s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon node"
       style="top:60.9805924412666%;left:42.239583333333336%;animation-delay:-1.45s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon vue"
       style="top:29.009193054136876%;left:91.90625%;animation-delay:-1.05s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon sass"
       style="top:52.093973442288046%;left:68.90625%;animation-delay:-0.7s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon ts"
       style="top:45.093973442288046%;left:73.90625%;animation-delay:-0.5s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon redux"
       style="top:39.093973442288046%;left:62.90625%;animation-delay:-0.90s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon tailwind"
       style="top:76.51174668028601%;left:85.59375%;animation-delay:-0.35s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon astro"
       style="top:60.51174668028601%;left:90.59375%;animation-delay:-2.35s;"
     ></span>
     <span
+      aria-hidden="true"
       class="icon react"
       style="top:11.542390194075587%;left:91.51041666666667%;animation-delay:-0.1s;"
     ></span>
