--- a/src/components/IconsBackground.astro
+++ b/src/components/IconsBackground.astro
@@ -164,6 +164,11 @@
     ></span>
     <span
       aria-hidden="true"
+      class="icon nest"
+      style="top:20.6976506639428%;left:75.28125%;animation-delay:-1.1s;"
+    ></span>
+    <span
+      aria-hidden="true"
       class="icon next"
       style="top:92.30745658835546%;left:45.15625%;animation-delay:-1.75s;"
     ></span>
@@ -201,6 +206,11 @@
       aria-hidden="true"
       class="icon sass"
       style="top:52.093973442288046%;left:68.90625%;animation-delay:-0.7s;"
+    ></span>
+    <span
+      aria-hidden="true"
+      class="icon nest"
+      style="top:62.093973442288046%;left:72.90625%;animation-delay:-1.7s;"
     ></span>
     <span
       aria-hidden="true"
@@ -325,6 +335,9 @@
   }
   .express {
     background-image: url(/icons/express.png);
+  }
+  .nest {
+    background-image: url(/icons/nestjs.png);
   }
 
   @keyframes icon {
