--- a/src/components/en/About.astro
+++ b/src/components/en/About.astro
@@ -61,6 +61,16 @@
         </li>
         <li>
           <div class="flex justify-center items-center max-w-fit">
+            <img
+              class="w-8 h-8 mr-2"
+              src="/icons/nestjs.png"
+              alt="NestJs icon"
+            />
+            <span>NestJS</span>
+          </div>
+        </li>
+        <li>
+          <div class="flex justify-center items-center max-w-fit">
             <img class="w-8 h-8 mr-2" src="/icons/sass.png" alt="SASS icon" />
             <span>SASS</span>
           </div>
@@ -311,6 +321,16 @@
                 alt="Express icon"
               />
               <span>Express</span>
+            </div>
+          </li>
+          <li>
+            <div class="flex justify-center items-center max-w-fit">
+              <img
+                class="w-8 h-8 mr-2"
+                src="/icons/nestjs.png"
+                alt="NestJs icon"
+              />
+              <span>NestJS</span>
             </div>
           </li>
           <li>
